fix: text contrast v1

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,7 +62,7 @@
   --card-foreground: #000000;
   --popover: #ffffff;
   --popover-foreground: #000000;
-  --primary: #08bc14;
+  --primary: #047a0d;
   --primary-foreground: #ffffff;
   --secondary: #ececec;
   --secondary-foreground: #000000;
@@ -73,20 +73,20 @@
   --destructive: #d70000;
   --border: #b7b7b7;
   --input: #b7b7b7;
-  --ring: #08bc14;
-  --chart-1: #08bc14;
+  --ring: #047a0d;
+  --chart-1: #047a0d;
   --chart-2: #d70000;
   --chart-3: #b7b7b7;
   --chart-4: #ff5c2e;
   --chart-5: #b00000;
   --sidebar: #f5f5f5;
   --sidebar-foreground: #000000;
-  --sidebar-primary: #08bc14;
+  --sidebar-primary: #047a0d;
   --sidebar-primary-foreground: #ffffff;
   --sidebar-accent: #ececec;
   --sidebar-accent-foreground: #000000;
   --sidebar-border: #b7b7b7;
-  --sidebar-ring: #08bc14;
+  --sidebar-ring: #047a0d;
 }
 
 .dark {
